Fix small screen horizontal scroll issues

--- a/src/code/code-block.css
+++ b/src/code/code-block.css
@@ -60,6 +60,13 @@
   user-select: text;
 }
 
+/* make all wrapper children have the same width inside the scroll */
+.cb-w {
+  display: inline-block;
+  width: 100%;
+  min-width: fit-content;
+}
+
 /* selection color */
 .cb::selection,
 .cb *::selection {
@@ -138,10 +145,8 @@
 /* section expander */
 .cb-sh {
   display: block;
-  position: sticky;
-  left: 0;
+  position: relative;
   cursor: pointer;
-  padding-left: calc(var(--spacing) * 4);
   color: var(--cb-section-expander);
 }
 .cb-sh *:focus,
@@ -168,11 +173,15 @@
 .cb-sh-s {
   display: flex;
   align-items: center;
-  gap: calc(var(--spacing) * 2);
   height: calc(var(--spacing) * 7);
 }
 :is(.cb-sh-h, .cb-sh-s)::before {
+  position: sticky;
+  left: 0;
   border-radius: var(--radius-xs);
+  background-color: var(--cb-bg);
+  padding-right: calc(var(--spacing) * 2);
+  padding-left: calc(var(--spacing) * 4);
   content: "(\0000B7\0000B7\0000B7)"; /* three middle dots in parentheses */
 }
 :is(.cb-sh:hover, .cb-sh:has(:focus-visible)) .cb-sh-h::before {
